--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "preview": "vite preview",
     "format:fix": "prettier --write .",
     "prepare": "husky && chmod ug+x .husky/*",
-    "test": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test": "vitest run --coverage"
   },
   "dependencies": {
     "react": "^18.3.1",
