--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "prepare": "husky && chmod ug+x .husky/*",
     "test": "vitest run --coverage"
   },
+  "lint-staged": {
+    "**/*.{ts,tsx,js,jsx,json,css,scss,md}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -37,6 +43,7 @@
     "globals": "^15.14.0",
     "husky": "^9.1.7",
     "jsdom": "^26.0.0",
+    "lint-staged": "^15.4.3",
     "prettier": "3.4.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
